Fixed line spacing on signup form

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -226,6 +226,11 @@ Forms
   margin-top: 15px;
 }
 
+.g__form-divider {
+  border: solid 1px #f0e1cf;
+  margin: 40px 0;
+}
+
 
 /* —————————————————————————————————————
 Global Dashboards
